# neonwave

./: .env.example  .gitignore  README.md  fix2.py  fix3.py  fix_frontend.py  index.html  package-lock.json  package.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio_capture.rs  color.rs  lib.rs  local_player.rs  spotify.rs  types.rs
src/components/: AlbumArt.tsx  AuraDisc.tsx  LeftSidebar.tsx  LyricsOverlay.tsx  ModeToggle.tsx  PlayerControls.tsx  ProgressBar.tsx  SpotifyLogin.tsx  TitleBar.tsx  TrackInfo.tsx  Visualizer.tsx
src/hooks/: useDynamicColor.ts  useVisualizer.ts
src/stores/: playerStore.ts
